# rust-linkagg-backend

./: .env  .env.example  Cargo.toml  docker-compose.yml  readme.md  schema.md
migrations/: 20211028012218_create_user_registration_table.sql  20211028012300_create_user_table.sql  20211028020459_create_user_session_table.sql  20211028225932_create_guild_table.sql  20211028230612_create_guildmembership_table.sql  20211029212522_create_post_table.sql  20211029213229_create_comment_table.sql  20211030040806_create_post_vote_table.sql  20211030163640_create_post_notification_table.sql  20211030164556_create_comment_notification_table.sql  20211030165915_create_notification_triggers.sql  20211030172839_create_comment_votes_table.sql  20211030214950_password_resets.sql  20211031032719_create_aggregate_tables.sql  20211031042735_create_aggregate_triggers.sql  20211031043321_create_better_detailed_views.sql  20211031183743_create_site_info_table.sql  20211031184444_create_reports_table.sql  20211031191751_create_blocks_table.sql
src/: main.rs
src/aggregates/: model.rs
src/block/: model.rs
src/bookmark/: model.rs
src/comment/: model.rs
src/comment_vote/: model.rs
src/guild/: model.rs
src/guild_membership/: model.rs
src/notification/: model.rs
src/password_reset/: model.rs
src/post/: model.rs
src/post_vote/: mod.rs  model.rs
src/report/: mod.rs  model.rs
src/routes/: comment.rs  guild.rs  mod.rs  post.rs  registration.rs  report.rs  reset_password.rs  site.rs  user.rs  view.rs  vote.rs
src/search/: model.rs
src/site/: model.rs
src/user/: model.rs
(+64 files in other folders)
